# bazel-gazelle

./: Design.rst  go.mod  go.sum
cmd/autogazelle/: BUILD.bazel  autogazelle.bash  autogazelle.go  client_server_unix.go  client_unix.go  server_unix.go
cmd/gazelle/: fix-update.go  update-repos.go
internal/config/: config.go  constants.go
internal/generator/: BUILD.bazel  generator.go  generator_test.go
internal/language/: lang.go
internal/language/go/: BUILD.bazel  config.go  config_test.go  constants.go  fileinfo_go_test.go  generate.go  lang.go  package.go  resolve.go  resolve_test.go
internal/language/proto/: config.go  constants.go  generate.go  generate_test.go  resolve.go
internal/language/proto/testdata/default_visibility/: BUILD.want
internal/merger/: BUILD.bazel  fix.go  merger.go
internal/repos/: import_test.go  modules.go
internal/resolve/: BUILD.bazel  index.go  resolve.go  resolve_external.go  resolve_vendored.go
internal/rule/: BUILD.bazel  expr.go  merge.go  platform_strings.go  rule.go  types.go
internal/walk/: config.go  walk.go
