load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "index.go",
        "resolve.go",
        "resolve_external.go",
        "resolve_vendored.go",
        "std_package_list.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/internal/resolve",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/label:go_default_library",
        "//internal/labeler:go_default_library",
        "//internal/pathtools:go_default_library",
        "//internal/repos:go_default_library",
        "//internal/rule:go_default_library",
        "//vendor/github.com/bazelbuild/buildtools/build:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "resolve_external_test.go",
        "resolve_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/label:go_default_library",
        "//internal/labeler:go_default_library",
        "//internal/repos:go_default_library",
        "//internal/rule:go_default_library",
        "//vendor/github.com/bazelbuild/buildtools/build:go_default_library",
        "//vendor/golang.org/x/tools/go/vcs:go_default_library",
    ],
)
